# mountaineer-email

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.tests.yml  pyproject.toml  pyrightconfig.json
.github/scripts/: update_version.py  verify_plugin_assets.py
.github/workflows/: test.yml
example-app/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
example-app/example_app/: app.py  cli.py  config.py  emails.py  main.py
example-app/example_app/__tests__/: conftest.py
example-app/example_app/controllers/: __init__.py  detail.py  home.py
example-app/example_app/models/: __init__.py  detail.py
example-app/example_app/views/: package-lock.json  package.json
example-app/example_app/views/app/detail/: page.tsx
example-app/example_app/views/app/home/: page.tsx
example-app/example_app/views/emails/welcome_preview/: page.tsx
mountaineer_email/: __init__.py  cli.py  config.py  controller.py  deps.py  logging.py  plugin.py  registry.py  render.py
mountaineer_email/__tests__/: conf_models.py  conftest.py  test_controller.py  test_registry.py  test_send_email_workflow.py
mountaineer_email/__tests__/daemons/: test_send_email.py
mountaineer_email/__tests__/fixtures/: __init__.py  example_tailwind.css
mountaineer_email/__tests__/fixtures/test_views/: package-lock.json  package.json
mountaineer_email/__tests__/fixtures/test_views/emails/email1/: page.tsx
mountaineer_email/__tests__/integrations/: test_dependency_injection.py
mountaineer_email/__tests__/integrations/fixtures/dependency_injection_views/: package.json
mountaineer_email/__tests__/integrations/fixtures/dependency_injection_views/emails/dependency_injection/: page.tsx
mountaineer_email/controllers/: __init__.py  email_detail.py  email_home.py
mountaineer_email/daemons/: __init__.py  send_email.py
mountaineer_email/views/: __init__.py  package-lock.json  package.json  tsconfig.json
mountaineer_email/views/email/: layout.tsx  main.css
mountaineer_email/views/email/detail/: mock_body.tsx  page.tsx
mountaineer_email/views/email/home/: page.tsx
mountaineer_email/workflows/: __init__.py  send_email.py
