[project]
name = "mountaineer-email"
version = "0.1.3"
description = ""
authors = [
    { name = "Pierce Freeman", email = "pierce@freeman.vc" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.1.1",
    "pydantic-settings>=2.2.1",
    "lxml>=5.1.0",
    # for now, flexible to version but requires them present
    # during execution
    "mountaineer-cloud>=0.1.2",
    "mountaineer",
    "waymark",
]

[project.scripts]
build-email = "mountaineer_email.cli:build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# All plugins have isolated scopes (ie. no node_modules dependency sharing) when
# added to a larger mountaineer project, so we need to copy over our built
# artifacts for use in the downstream webapp
artifacts = [
    "mountaineer_email/views/_static",
    "mountaineer_email/views/_ssr"
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pyright>=1.1.352",
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "lxml-stubs>=0.5.1",
    "httpx>=0.27.0",
    "ty>=0.0.26",
    "pytest-httpx>=0.35.0",
]

[tool.uv.sources]
#mountaineer = { path = "../../mountaineer", editable = true }
#mountaineer-cloud = { path = "../mountaineer-cloud", editable = true }

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "mountaineer",
    "first-party",
    "local-folder",
]
combine-as-imports = true

[tool.ruff.lint.isort.sections]
mountaineer = [
    "mountaineer",
    "mountaineer_cloud",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]
